@@ -170,7 +170,7 @@ class SRX extends PARSER
 
 
         $doc = new DOMDocument();
-        $doc->loadXML($data);
+        $doc->loadXML($data, XML_PARSE_BIG_LINES);
 
 
         $root = $doc->documentElement; // Root node
