@@ -2,6 +2,7 @@ CHANGELOG
 
 2.1.19
 UTIL:
+* different classes | improve usage of flag 'XML_PARSE_BIG_LINES' in method loadXML
 
 BUGFIX:
 
